@@ -8,6 +8,7 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
+  Alien::scriptaculous: 0
   perl: 5.6.0
 build_requires:
   Archive::Zip: 0
